# RoughML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Nanorough_surface_Super_resolution.ipynb  Nanorough_surface_Super_resolution.py  Pipfile  README.md  hpg2d_content_loss_pretrained.py  nanosurface_generator.py  pyproject.toml  requirements.txt  task1.ipynb
.github/workflows/: publish.yml
src/roughml/: metrics.py  plot.py
src/roughml/cli/: benchmark.py  dataset.py  tune.py  visualize.py
src/roughml/content/: loss.py  quantization.py
src/roughml/data/: generators.py  loaders.py  model_weights.py  sets.py  transforms.py
src/roughml/models/: __init__.py  autoencoder.py  base.py  cnn.py  perceptron.py
src/roughml/scripts/: Nanorough_surface_Super_resolution_development.py  Nanorough_surface_Super_resolution_test.py  image_comparison.py  image_fft2d.py  polar_fft.py  polar_fft2d.py  pytorchtools.py  test.py
src/roughml/scripts/Old/: polar_fft.py  polar_fft_old.py
src/roughml/shared/: configuration.py  context_managers.py  decorators.py  early_stop.py  notifiers.py
src/roughml/training/: epoch.py  flow.py  manager.py  split.py
src/roughml/tuning/: flow.py  manager.py  trial.py
