[tool.poetry]
name = "roughml"
version = "0.2.0"
description = "A nanorough surface super-resolution framework"
authors = ["billsioros <billsioros97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
numpy = "^1.20.3"
plotly = "^4.14.3"
matplotlib = "3.1.1"
sympy = "^1.8"
sklearn = "^0.0"
pandas = "^1.2.4"
pyinsect = {git = "https://github.com/billsioros/PyINSECT.git", rev = "FEATURE_Implementing_HPGraphCollector"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
isort = "^5.8.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "Nanorough_surface_Super_resolution.py"]

[tool.vulture]
min_confidence = 95
paths = ["src", "Nanorough_surface_Super_resolution.py"]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
build_command = "python -m pip install poetry && poetry build"
